@@ -6,6 +6,14 @@
 
                                   Changelog
 
+Daniel S (24 August 2007)
+- Bug report #1779054 (http://curl.haxx.se/bug/view.cgi?id=1779054) pointed
+  out that libcurl didn't deal with large responses from server commands, when
+  the single response was consisting of multiple lines but of a total size of
+  16KB or more. Dan Fandrich improved the ftp test script and provided test
+  case 1006 to repeat the problem, and I fixed the code to make sure this new
+  test case runs fine.
+
 Patrick M (23 August 2007)
 - OS/400 port: new files lib/config-os400.h lib/setup-os400.h packages/OS400/*.
   See packages/OS400/README.OS400.
